--- a/app/src/main/res/layout/taxi_close.xml
+++ b/app/src/main/res/layout/taxi_close.xml
@@ -94,7 +94,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="horizontal">
-
             <EditText
                 android:id="@+id/gsm"
                 android:layout_width="match_parent"
@@ -103,6 +102,20 @@
                 android:inputType="numberDecimal"
                 android:textAlignment="center"
                 android:textSize="20sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Комментарий"
+                android:inputType="text"
+                android:textAlignment="center"
+                android:textSize="20sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -137,7 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
-        android:text="Старт смены"
+        android:text="Закрыть смену"
         android:textSize="20sp"
         android:onClick="closeTaxi"
         app:layout_constraintLeft_toLeftOf="parent"
