--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,18 +43,21 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/otherLoss"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="НП: 0."
-                android:textSize="20sp" />
-
-            <TextView
                 android:id="@+id/gsmView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:text="ГСМ: 0."
                 android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/otherLoss"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="НП: 0."
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/startCashText"
                 android:layout_width="wrap_content"
