--- a/app/src/main/res/layout/add_loss.xml
+++ b/app/src/main/res/layout/add_loss.xml
@@ -24,6 +24,7 @@
         app:layout_constraintRight_toRightOf="parent">
         <RadioButton
             android:id="@+id/checkGsm"
+            android:checked="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Бензин"/>
