--- a/app/src/main/res/layout/taxi_close.xml
+++ b/app/src/main/res/layout/taxi_close.xml
@@ -35,7 +35,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/cash"
+                android:id="@+id/cashClose"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Наличка в конце"
